third_party/blink/renderer/core/frame/local_frame.cc
@@ -1357,8 +1357,10 @@ void LocalFrame::SetViewportIntersectionFromParent(
     const IntRect& viewport_intersection) {
   if (remote_viewport_intersection_ != viewport_intersection) {
     remote_viewport_intersection_ = viewport_intersection;
-    if (View())
+    if (View()) {
+      View()->SetNeedsIntersectionObservation(LocalFrameView::kRequired);
       View()->ScheduleAnimation();
+    }
   }
 }
 
